--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>1049496760089-dd56tn189f4600gjh0l8ulkbquebbae1.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.1049496760089-dd56tn189f4600gjh0l8ulkbquebbae1</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>1049496760089-jcnkpedhmsi38rdt15im7vc2jrhue29q.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyA9Zmx0bvz_2oXkghpo15G-JNaruoOE0Oc</string>
 	<key>GCM_SENDER_ID</key>
