--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cloud_firestore: ^5.4.4
   google_sign_in: ^6.2.1
   image_picker: ^1.1.2
+  drop_down_list: ^0.0.8
+  animated_custom_dropdown: ^3.1.1
 
 dev_dependencies:
   flutter_test:
