--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   image_picker: ^1.1.2
   drop_down_list: ^0.0.8
   animated_custom_dropdown: ^3.1.1
+  firebase_storage: ^12.3.4
+  bottom_navy_bar: ^6.1.0
 
 dev_dependencies:
   flutter_test:
