--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   animated_custom_dropdown: ^3.1.1
   firebase_storage: ^12.3.4
   bottom_navy_bar: ^6.1.0
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
