--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   firebase_storage: ^12.3.4
   bottom_navy_bar: ^6.1.0
   transparent_image: ^2.0.1
+  carousel_slider: ^5.0.0
+  overlay_loader_with_app_icon: ^0.0.4
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +74,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/userPhoto/A2B.jpg
+  - assets/loaderIcon/7451012.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
