--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,8 @@ flutter:
   assets:
   - assets/userPhoto/A2B.jpg
   - assets/loaderIcon/7451012.png
+  - assets/userPhoto/biryani.png
+  - assets/userPhoto/burger.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
