--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,14 @@ dependencies:
   transparent_image: ^2.0.1
   carousel_slider: ^5.0.0
   overlay_loader_with_app_icon: ^0.0.4
+  flutter_launcher_icons: ^0.14.1
+
+
+flutter_launcher_icons:
+  android: true
+  image_path: "assets/userPhoto/logo.png"
+  adaptive_icon_foreground: "assets/userPhoto/logo.png"
+  adaptive_icon_background: "#ffffff"
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +67,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+
+
+
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
