--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.1
   http: ^1.2.2
   shimmer: ^3.0.0
+  cached_network_image: ^3.4.1
 
 
 flutter_launcher_icons:
