--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   http: ^1.2.2
   shimmer: ^3.0.0
   cached_network_image: ^3.4.1
+  razorpay_flutter: ^1.3.7
 
 
 flutter_launcher_icons:
