--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,11 @@ dependencies:
   shimmer: ^3.0.0
   cached_network_image: ^3.4.1
   razorpay_flutter: ^1.3.7
+  stylish_bottom_bar: ^1.1.0
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
+  freezed_annotation: ^2.4.4
+  freezed: ^2.5.7
 
 
 flutter_launcher_icons:
@@ -71,6 +76,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  riverpod_generator: ^2.6.2
+  build_runner: ^2.4.13
+  custom_lint: ^0.7.0
+  riverpod_lint: ^2.6.2
+  json_serializable: ^6.8.0
 
 
 
