--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   riverpod_annotation: ^2.6.1
   freezed_annotation: ^2.4.4
   freezed: ^2.5.7
+  url_launcher: ^6.3.1
 
 
 flutter_launcher_icons:
