--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   freezed_annotation: ^2.4.4
   freezed: ^2.5.7
   url_launcher: ^6.3.1
+  auto_size_text: ^3.0.0
 
 
 flutter_launcher_icons:
