--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,10 @@ dependencies:
   url_launcher: ^6.3.1
   auto_size_text: ^3.0.0
   intl: ^0.19.0
+  shared_preferences: ^2.3.3
+  custom_button_builder: ^0.0.4
+  flutter_screenutil: ^5.9.3
+  lottie: ^3.1.3
 
 
 flutter_launcher_icons:
@@ -108,6 +112,7 @@ flutter:
   - assets/userPhoto/burger.png
   - assets/userPhoto/logo.png
   - assets/userPhoto/google_logo.png
+  - assets/userPhoto/avatar.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -121,17 +126,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+   - family: Metropolis
+     fonts:
+       - asset: lib/fonts/Metropolis-SemiBold.otf
+  
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
