--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ dependencies:
   flutter_screenutil: ^5.9.3
   lottie: ^3.1.3
   giffy_dialog: ^2.3.0
+  sidebarx: ^0.17.1
+  flutter_side_menu: ^0.5.41
 
 
 flutter_launcher_icons:
