--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,9 +71,10 @@ dependencies:
 
 
 flutter_launcher_icons:
-  android: true
-  image_path: "assets/userPhoto/logo.png"
-  adaptive_icon_foreground: "assets/userPhoto/logo.png"
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/userPhoto/foodex_logo_transparent.png"
+  adaptive_icon_foreground: "assets/userPhoto/foodex_logo_transparent.png"
   adaptive_icon_background: "#ffffff"
 
 dev_dependencies:
@@ -109,14 +110,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - assets/userPhoto/A2B.jpg
-  - assets/loaderIcon/7451012.png
-  - assets/userPhoto/biryani.png
-  - assets/userPhoto/burger.png
-  - assets/userPhoto/logo.png
-  - assets/userPhoto/google_logo.png
-  - assets/userPhoto/avatar.png
   - assets/gif/gambar-burger-kartun-14.gif
+  - assets/menu_graphic/menu.png
+  - assets/userPhoto/foodex_logo_transparent.png
+  - assets/userPhoto/google_logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
